pastey-test-suite/tests/ui/invalid-token-in-replace.stderr
error: Expected either Ident, or Literal.
 --> tests/ui/invalid-token-in-replace.rs:4:24
  |
4 |     fn [< foo :replace(!, "bar") >]() {}
  |                        ^
