pastey-test-suite/tests/ui/invalid-token-in-replace.rs
use pastey::paste;

paste! {
    fn [< foo :replace(!, "bar") >]() {}
}

fn main() {}
